...
            "state": "translated",
            "value": "Đặt làm mặt bằng (%lld bản quét)"
          }
        }
      }
    },
    "Order Q&A": {
      "extractionState": "manual",
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Otázky k objednávkám"
...
            "state": "translated",
            "value": "Đặt hàng"
          }
        }
      }
    },
    "Orders": {
      "extractionState": "manual",
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Objednávky"
...
            "state": "translated",
            "value": "Scan %@"
          }
        }
      }
    },
    "Scan a new space": {
      "extractionState": "manual",
      "localizations": {
        "cs": {
          "stringUnit": {
            "state": "translated",
            "value": "Naskenovat nový prostor"
...
